# Geostatistics

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/geostat/: gaussian_sim.py
